objects/vlocity_cmt__AsyncProcess__c.object
<CustomObject>
    <description>Async Engine overall details</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalData__c</fullName>
        <description>Global data used by the custom processes.</description>
        <label>Additional Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessSteps__c</fullName>
        <description>Async Process and Steps details (JSON).</description>
        <label>Async Process Steps</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentStepNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Step number which is executing.</description>
        <label>Current Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
        <description>List of the items to be processed.</description>
        <label>Items to Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastStepFinishProcessAdditionalData__c</fullName>
        <description>The AdditionalData returned by the finishProcess last executed.</description>
        <label>Last Step Finish Process Additional Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <description>User-friendly overall information related to the Async Process.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferenceId__c</fullName>
        <description>An identifier provided by the Async Engine client (e.g. an external ID).</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of the overall Async Process. If any child item failed then the status is failed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InProgess</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>InProgress-Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepName__c</fullName>
        <description>Custom Name of the Step currently executing.</description>
        <label>Step Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TechnicalMessage__c</fullName>
        <description>Technical details about the Async Engine execution.</description>
        <label>Technical Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalNumberOfSteps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of steps provided.</description>
        <label>Total Number Of Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UUID__c</fullName>
        <description>Universally unique identifier</description>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Async Process</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Status__c</columns>
        <columns>vlocity_cmt__Message__c</columns>
        <columns>vlocity_cmt__CurrentStepNumber__c</columns>
        <columns>vlocity_cmt__StepName__c</columns>
        <columns>vlocity_cmt__TotalNumberOfSteps__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Async Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>